# team-supreme

./: Checkpoint_2.ipynb  Exploratory_AB.ipynb  Explore_AB.ipynb  MLP_Tuning.ipynb  MLP_Tuning_AB.ipynb  README.md  checkpoint1.ipynb  checkpoint2.ipynb  explore_fv.ipynb  logit_tuning_fv.ipynb  mlp_tuning.ipynb  pyproject.toml  wrangle.ipynb
data/: X_test_feat  X_train_feat  results.csv  subset.csv  y_test  y_test.csv  y_train  y_train.csv  y_val  y_val.csv
