[tool.poetry]
name = "team-supreme"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "team_supreme"}]

[tool.poetry.dependencies]
python = "^3.11"
convokit = "^2.5.3"
numpy = "^1.24.2"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
