[tool.poetry]
name = "team-supreme"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
convokit = "^2.5.3"
numpy = "^1.24.2"
pandas = "^2.0.0"
gender-guesser = "^0.4.0"
regex = "^2023.5.5"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
